# ros2-lerobot-code

chapter1/: vscode_install.sh
chapter2/: auto_pick_place_program.py  leader_follower.py  motor_test.py  playback_program.py  position_monitor.py  teaching_program.py
chapter3/: CMakeLists.txt  auto_pick_place_node.py  bg_client.py  circle_pub.py  circle_sub.py  draw_client.py  draw_server.py  feetech_driver_node.py  move_pub.py  package.xml  playback_node.py  pose_sub.py  square_pub.py  teaching_node.py  turtlesim_circle.launch.py
chapter4/: CMakeLists.txt  gazebo.launch.py  gazebo_control.launch.py  real_control.launch.py  ros2_controllers_gazebo.yaml  ros2_controllers_real.yaml  setup.py  so_arm101.urdf  so_arm101_control_gazebo.urdf.xacro  so_arm101_control_gazebo.xacro  so_arm101_driver.xml  so_arm101_hardware.cpp  so_arm101_hardware.hpp  so_arm101_ros2_control.xacro
chapter4/so_arm101_pick_place/: pick_place_sequence_node.py  setup.py
